# try-git

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  Makefile  README.md  appveyor.yml  compile.sh  func.cpp  main.cpp  main.hpp
appveyor/: appveyor.bash
lib/: CMakeLists.txt
res/: descr.txt
